# trustbench

./: .gitignore  CONTRIBUTE_A_TASK.md  CONTRIBUTORS.md  LEADERBOARD.md  README.md  _config.yml  blog-draft.md  eval.py  index.html  outreach-email.md  paper.html  pyproject.toml  requirements.txt  task-expansion-plan.md
_layouts/: default.html
assets/css/: style.css
docs/: authoring.md  running.md  schema.md  scoring.md  tasks.md
paper/: trustbench.tex
schema/: trustbench-schema.json
tasks-detail/: a1.2-1-001.html  a1.2-2-001.html  a1.2-3-001.html  a1.2-4-001.html  a1.2-4-002.html  a1.2-4-003.html  a1.2-5-001.html  a1.2-5-002.html  a1.2-5-003.html  c1.1-1-001.html  c1.1-2-001.html  c1.1-3-001.html  c1.1-4-001.html  c1.1-4-002.html  c1.1-4-003.html  c1.1-5-001.html  c1.1-5-002.html  c1.1-5-003.html  cc1.1-1-001.html  cc1.1-2-001.html  cc1.1-3-001.html  cc1.1-4-001.html  cc1.1-4-002.html  cc1.1-4-003.html  cc1.1-5-001.html  cc1.1-5-002.html  cc1.1-5-003.html  cc1.4-1-001.html  cc1.4-2-001.html  cc1.4-3-001.html  cc1.4-4-001.html  cc1.4-4-002.html  cc1.4-4-003.html  cc1.4-5-001.html  cc1.4-5-002.html  cc1.4-5-003.html  cc3.1-1-001.html  cc3.1-2-001.html  cc3.1-3-001.html  cc3.1-4-001.html  (+113 more)
tasks/a1.2-1-001/: task.json
tasks/a1.2-2-001/: task.json
tasks/a1.2-3-001/: task.json
tasks/a1.2-4-001/: task.json
tasks/a1.2-4-002/: task.json
tasks/a1.2-4-003/: task.json
tasks/a1.2-5-001/: task.json
tasks/a1.2-5-002/: task.json
tasks/a1.2-5-003/: task.json
trustbench/: __init__.py  cli.py  loader.py  reporter.py  runner.py  scorer.py
(+1620 files in other folders)
