[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustbench"
version = "0.1.0"
description = "A benchmark for evaluating LLMs on SOC 2 compliance auditing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
trustbench = "trustbench.cli:main"

[tool.setuptools.packages.find]
include = ["trustbench*"]

[tool.setuptools.package-data]
trustbench = ["../schema/*.json", "../tasks/**/*"]
